# CCTool

./: .gitignore  Build.bat  CLAUDE.md  CMakeLists.txt  Run.bat
Resources/: App.qrc
Resources/Styles/: Main.qss
Scripts/: FixSln.ps1  Rebuild.ps1
Sources/: Main.cpp  MainWindow.cpp  MainWindow.h
Sources/Core/: CCProcess.cpp  CCProcess.h  CCSessionReader.cpp  CCSessionReader.h  StreamSimulator.cpp  StreamSimulator.h
Sources/Data/: Database.cpp  Database.h  RepoInfo.h
Sources/Ui/: HistoryPanel.cpp  HistoryPanel.h  LeftPanel.cpp  LeftPanel.h  OutputView.cpp  OutputView.h  RepoTab.cpp  RepoTab.h  SessionPickerDialog.cpp  SessionPickerDialog.h  TalkView.cpp  TalkView.h
Src/: MainWindow.cpp
Src/Core/: CCProcess.cpp  CCProcess.h
Src/Data/: Database.cpp  Message.h  RepoInfo.h  SessionInfo.h
Src/Ui/: HistoryPanel.cpp  HistoryPanel.h  LeftPanel.h  RepoTab.cpp  RepoTab.h  RichTextEditor.cpp  RichTextEditor.h
